fix: Vertical alignment of inline code inside a `Prose` component

--- a/src/prose/prose.module.css
+++ b/src/prose/prose.module.css
@@ -198,7 +198,6 @@
 
 .prose :not(pre) > code {
     padding: 2px 4px;
-    vertical-align: text-top;
 }
 
 .prose pre {
